# hash-sha1

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: hash.rs  update.rs
src/: digest.rs  lib.rs  state.rs
tests/: sha1.rs
