[workspace]
members = [
    ".",
    "fuzz",
]

[package]
name = "chksum-hash-sha1"
version = "0.0.0"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.63.0"
description = "An implementation of SHA-1 hash algorithm for batch and stream computation."
readme = ".cargo/README.md"
repository = "https://github.com/chksum-rs/hash-sha-1"
license = "MIT"
keywords = ["checksum", "digest", "hash", "sha1", "sha-1"]
categories = ["algorithms", "cryptography"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chksum-hash-core = "0.0.0"
thiserror = "1.0.51"
arbitrary = { version = "1.3.2", optional = true, features = ["derive"] }

[features]
default = []
fuzzing = ["arbitrary"]
